--- a/家社分析結果.htm
+++ b/家社分析結果.htm
@@ -344,4 +344,8 @@
         <tr>
             <td style="text-align:left"><em>Note:</em></td>
             <td colspan="2" style="text-align:right"><sup>*</sup>p<0.1; <sup>**</sup>p<0.05; <sup>***</sup>p<0.01</td>
-                            </tr> </table> </body> </html>
+        </tr> 
+    </table> 
+                        
+</body> 
+</html>
