--- a/index.html
+++ b/index.html
@@ -343,9 +343,9 @@
         </tr>
         <tr>
             <td style="text-align:left"><em>Note:</em></td>
-            <td colspan="2" style="text-align:right"><sup>*</sup>p<0.1; <sup>**</sup>p<0.05; <sup>***</sup>p<0.01</td>
-        </tr> 
-    </table> 
-                        
-</body> 
+            <td colspan="2" style="text-align:right"><sup>*</sup>p＜0.1; <sup>**</sup>p＜0.05; <sup>***</sup>p＜0.01</td>
+        </tr>
+    </table>
+</body>
+
 </html>
